.ref_landing/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-dashboard-ingress
  namespace: orchestreeai-admin
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "admin-dashboard-ssl"
spec:
  rules:
    - host: admin.orchestree.biz.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-dashboard-svc
                port:
                  number: 80
    - host: orchestree.biz.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-dashboard-svc
                port:
                  number: 80
